# asia-fertility

./: .editorconfig  .gitignore  .pre-commit-config.yaml  89e8286a-d6bf-469e-8532-f80f705e58e9-FertiScope_-Measuring-the-Multilingual-Tokenizer-Tax-in-Low-Resource-Asian-Languages.txt  CITATION.cff  FINAL_STATUS.md  Makefile  README.md  ROADMAP.md  dataset_README.md  pyproject.toml
_archive/: FINAL_STATUS.md  RELATED_WORK_BRAINSTORM.md
configs/: latency_main.yaml  latency_test.yaml  niah_main.yaml  niah_v03.yaml  study_main.yaml  study_test.yaml
docs/: adding_a_tokenizer.md  usage.md
legacy_v01/: README.md  crawl_baochinhphu.py  demo.py  pyproject.toml
legacy_v01/crawl_output/: d0__en.baochinhphu.vn_index.md  d1__en.baochinhphu.vn_ambassadors-underscore-importance-of-asean-future-forum-in-strengthening-regional-unity-and-foresight-11126060809245277.htm.md  d1__en.baochinhphu.vn_asean-russia-should-create-more-stable-balanced-and-sustainable-environment-prime-minister-le-minh-hung-111260618195134791.htm.md  d1__en.baochinhphu.vn_asean-secretary-general-viet-nam-plays-bridge-building-role-in-asean-russia-strategic-partnership-111260615195119557.htm.md  d1__en.baochinhphu.vn_base-salary-to-increase-by-8-from-july-2026-111260429104029574.htm.md  d1__en.baochinhphu.vn_conditions-for-foreign-investors-to-conduct-investment-and-business-activities-with-restricted-access-11141103.htm.md  d1__en.baochinhphu.vn_culture.htm.md  d1__en.baochinhphu.vn_deadline-for-payment-of-vat-cit-pit-and-land-rent-extended-11141529.htm.md  d1__en.baochinhphu.vn_economy.htm.md  d1__en.baochinhphu.vn_eurocham-chairman-bruno-jaspaert-has-no-doubt-viet-nam-will-materialize-double-digit-growth-goal-111260618161746487.htm.md  d1__en.baochinhphu.vn_extension-of-time-limits-for-paying-tax-and-land-rent-11141528.htm.md  d1__en.baochinhphu.vn_four-out-of-ha-nois-seven-new-bridges-over-red-river-are-gradually-taking-shape-111260519112759782.htm.md  d1__en.baochinhphu.vn_full-keynote-address-by-prime-minister-le-minh-hung-at-asean-future-forum-2026-111260609104604235.htm.md  d1__en.baochinhphu.vn_full-viet-nam-philippines-joint-statement-on-enhanced-strategic-partnership-111260601145239761.htm.md  d1__en.baochinhphu.vn_general-secretary-president-to-lam-accorded-official-welcome-ceremony-in-philippines-111260601105756544.htm.md  d1__en.baochinhphu.vn_government-information-and-communications-bureau-founded-111260603093933815.htm.md  d1__en.baochinhphu.vn_governments-regular-meeting-november-2022-111230131203146532.htm.md  d1__en.baochinhphu.vn_governments-regular-meeting-october-2022-11123013120195868.htm.md  d1__en.baochinhphu.vn_govt-chief-receives-ceo-of-russian-direct-investment-fund-11126061909254812.htm.md  d1__en.baochinhphu.vn_govt-decrees-financial-support-to-boost-fertility-rate-111260520095603952.htm.md  d1__en.baochinhphu.vn_govt-promulgates-working-regulations-111260602110820344.htm.md  d1__en.baochinhphu.vn_hcmc-to-offer-free-bus-travel-from-july-through-year-end-111260619144941229.htm.md  d1__en.baochinhphu.vn_infographics-30-strategic-technology-products-111260508163334572.htm.md  d1__en.baochinhphu.vn_j-statements.htm.md  d1__en.baochinhphu.vn_jica-vows-to-accelerate-viet-nams-bid-on-reforms-and-double-digit-growth-111260612195310001.htm.md  d1__en.baochinhphu.vn_key-socio-economic-figures-in-first-four-months-of-2026-111260507163722572.htm.md  d1__en.baochinhphu.vn_keynote-address-by-general-secretary-and-president-to-lam-at-shangri-la-dialogue-2026-11126052921304821.htm.md  d1__en.baochinhphu.vn_le-thi-thuy-re-elected-president-of-viet-nam-womens-union-for-20262031-term-111260619100602922.htm.md  d1__en.baochinhphu.vn_major-tasks-and-solutions-to-implement-socio-economic-development-plan-in-2025-11125022611153377.htm.md  d1__en.baochinhphu.vn_major-tasks-and-solutions-to-improve-viet-nams-business-environment-in-2026-111260210131146989.htm.md  d1__en.baochinhphu.vn_monthly-resolutions.htm.md  d1__en.baochinhphu.vn_multimedia.htm.md  d1__en.baochinhphu.vn_multimedia_infographics.htm.md  d1__en.baochinhphu.vn_multimedia_longform.htm.md  d1__en.baochinhphu.vn_multimedia_photos.htm.md  d1__en.baochinhphu.vn_multimedia_video.htm.md  d1__en.baochinhphu.vn_nestle-strengthens-collaboration-with-partners-to-advance-regenerative-agriculture-in-viet-nam-111230621194115355.htm.md  d1__en.baochinhphu.vn_notice-for-viet-nam-bound-travellers-111260521112100387.htm.md  d1__en.baochinhphu.vn_opinion.htm.md  d1__en.baochinhphu.vn_policies.htm.md  (+243 more)
legacy_v01/fertiscope/: __init__.py  cli.py  context.py  cost.py  fertility.py  segmenters.py  tokenizers.py
legacy_v01/fertiscope/data/: flores_sample.py
legacy_v01/fertiscope/web/: app.py
legacy_v01/fertiscope/web/static/: app.js  style.css
legacy_v01/fertiscope/web/templates/: index.html
legacy_v01/neddle_degradation/: exhaustion_rate.py  llama31_8b_degradation_results.json  llama31_8b_window_131072_results.json  llama31_8b_window_16384_results.json  llama31_8b_window_32768_results.json  llama31_8b_window_4096_results.json  llama31_8b_window_65536_results.json  llama31_8b_window_8192_results.json  plot_languages.py  plot_sweep.py  sweep_languages.py  sweep_languages_results.json  sweep_results.json
paper/: README.md  paper.tex  refs.bib
tasks/: 001-archive-v01-and-create-skeleton.groomed.md  002-wire-pyproject-toml.groomed.md  010-corpus-protocol-and-sentence.groomed.md  012-flores-loader.groomed.md  013-sib200-and-mafand-loaders.groomed.md  014-custom-loader-and-reference-suite.groomed.md  015-per-sentence-metrics-and-nfc.groomed.md  016-word-segmentation-whitespace-and-icu.groomed.md  017-spaceless-segmentation.groomed.md  018-sum-then-divide-aggregation.groomed.md  020-prices-yaml-snapshot-and-loader.groomed.md  021-fx-yaml-snapshot-and-loader.groomed.md  022-cost-calculator-and-cli.groomed.md  023-study-config-pydantic-and-yamls.groomed.md  024-study-runner-orchestrator.groomed.md  025-manifest-and-output-writers.groomed.md  027-script-native-markers.groomed.md  030-niah-runner-and-cli.groomed.md  032-figures-4-6.groomed.md  (+8 more)
(+84 files in other folders)
