[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "asia-fertility"
version = "0.2.0"
description = "Tokenizer fertility, cost, and multi-turn context-budget analyzer for low-resource Asian languages."
authors = [{ name = "Antoine Pedretti" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["tokenizer", "fertility", "multilingual", "llm", "low-resource", "asian-languages"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
oai  = ["tiktoken>=0.8"]
hf   = [
    "transformers>=4.44",
    "tokenizers>=0.20",
    "huggingface-hub>=0.25",
    "datasets>=2.21",
    "sentencepiece>=0.2",
    "pythainlp>=5.0",
    "laonlp>=1.3",
    "khmer-nltk>=1.6",
]
api  = ["anthropic>=0.40", "google-genai>=0.3", "httpx>=0.27"]
niah = ["httpx>=0.27", "tenacity>=8.5"]
viz  = ["matplotlib>=3.9", "pandas>=2.2", "pyarrow>=17"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.26", "pymdown-extensions>=10"]
dev  = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.112",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "respx>=0.21",
    "types-PyYAML",
]

[project.urls]
Homepage      = "https://fertiscope.vercel.app"
Repository    = "https://github.com/Helmo21/asia-fertility"
Documentation = "https://helmo21.github.io/asia-fertility/"

[project.scripts]
asia-fertility = "asia_fertility.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/asia_fertility"]

[tool.hatch.build.targets.sdist]
include = ["src/asia_fertility", "configs", "data", "tests", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["legacy_v01", "fertiscope-web", "token_degradation_fertility"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.11"
exclude = ["legacy_v01", "fertiscope-web", "token_degradation_fertility", "build", "dist"]

[[tool.mypy.overrides]]
module = ["tiktoken.*", "tokenizers.*", "pythainlp.*", "icu.*", "huggingface_hub.*", "transformers.*", "datasets.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring network",
]
asyncio_mode = "auto"
