[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "asia-fertility"
version = "0.3.1"
description = "Tokenizer fertility, cost, and multi-turn context-budget analyzer for low-resource Asian languages."
authors = [{ name = "Antoine Pedretti" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["tokenizer", "fertility", "multilingual", "llm", "low-resource", "asian-languages"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
oai  = ["tiktoken>=0.8"]
hf   = [
    "transformers>=4.44",
    "tokenizers>=0.20",
    "huggingface-hub>=0.25",
    "datasets>=2.21",
    "sentencepiece>=0.2",
    "pythainlp>=5.0",
    "laonlp>=1.3",
    "khmer-nltk>=1.6",
]
api  = ["anthropic>=0.40", "google-genai>=0.3", "httpx>=0.27"]
niah = ["httpx>=0.27", "tenacity>=8.5"]
viz  = ["matplotlib>=3.9", "pandas>=2.2", "pyarrow>=17"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.26", "pymdown-extensions>=10"]
dev  = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.112",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "respx>=0.21",
    "types-PyYAML",
]

[project.urls]
Homepage      = "https://fertiscope.vercel.app"
Repository    = "https://github.com/Helmo21/asia-fertility"
Documentation = "https://helmo21.github.io/asia-fertility/"

[project.scripts]
asia-fertility = "asia_fertility.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/asia_fertility"]

# Hatchling defaults skip non-Python files under packages. Force-include the
# bundled YAML data shipped under asia_fertility/data/ and asia_fertility/_defaults/.
[tool.hatch.build.targets.wheel.force-include]
"src/asia_fertility/data/__init__.py" = "asia_fertility/data/__init__.py"
"src/asia_fertility/data/languages.yaml" = "asia_fertility/data/languages.yaml"
"src/asia_fertility/_defaults/prices_2026-06.yaml" = "asia_fertility/_defaults/prices_2026-06.yaml"
"src/asia_fertility/_defaults/fx_2026-06.yaml" = "asia_fertility/_defaults/fx_2026-06.yaml"
"src/asia_fertility/_defaults/niah_recall_2026-06.json" = "asia_fertility/_defaults/niah_recall_2026-06.json"

[tool.hatch.build.targets.sdist]
include = ["src/asia_fertility", "configs", "tests", "README.md", "LICENSE"]

[tool.hatch.build.targets.sdist.force-include]
"src/asia_fertility/data/__init__.py" = "src/asia_fertility/data/__init__.py"
"src/asia_fertility/data/languages.yaml" = "src/asia_fertility/data/languages.yaml"
"src/asia_fertility/_defaults/prices_2026-06.yaml" = "src/asia_fertility/_defaults/prices_2026-06.yaml"
"src/asia_fertility/_defaults/fx_2026-06.yaml" = "src/asia_fertility/_defaults/fx_2026-06.yaml"
"src/asia_fertility/_defaults/niah_recall_2026-06.json" = "src/asia_fertility/_defaults/niah_recall_2026-06.json"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["_archive"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "RUF001",  # ambiguous unicode in strings — × is intentional (multiplication for ratios)
    "RUF002",  # ambiguous unicode in docstrings — same
    "RUF003",  # ambiguous unicode in comments — same
    "E741",    # ambiguous variable name 'l' — used for "language" loop var by convention
    "E501",    # line too long — formatter handles, leftover long lines are mostly long URLs/strings
    "B905",    # zip without strict — fixed contextually where it matters
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
# Strict mode disabled — we ship a research package; keep type hints best-effort.
# Re-enable in v0.3 after a typing pass.
strict = false
ignore_errors = true
python_version = "3.12"
exclude = ["build", "dist", "paper", "_archive"]

[[tool.mypy.overrides]]
module = [
    "tiktoken.*", "tokenizers.*", "pythainlp.*", "icu.*",
    "huggingface_hub.*", "transformers.*", "datasets.*",
    "anthropic.*", "google.*", "pandas.*", "matplotlib.*",
    "khmernltk.*", "laonlp.*", "numpy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring network",
]
asyncio_mode = "auto"
