[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fertiscope"
version = "0.1.0"
description = "Tokenizer fertility + cost multiplier + context budget for multilingual LLM deployments. EN <-> VI for v0.1."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Antoine Pedretti" }]
dependencies = [
    "tiktoken>=0.7.0",
    "tokenizers>=0.20.0",
    "underthesea>=6.8.0",
    "rich>=13.0.0",
    "huggingface_hub>=0.24.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.scripts]
fertiscope = "fertiscope.cli:main"

[tool.setuptools.packages.find]
include = ["fertiscope*"]

[tool.setuptools.package-data]
"fertiscope.web" = ["templates/*.html", "static/*.css", "static/*.js"]
